--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,33 +1,31 @@
-@(title: String)(content: Html)
-
+@(title: String)(header: Html)(content: Html)
 <!DOCTYPE html>
-
 <html>
 <head>
-    <title>@title</title>
-    <link rel='stylesheet' media="screen" href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.css"))'>
-    <link rel='stylesheet' media="screen" href='@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.css"))'>
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-    <script data-main="@routes.Assets.at("javascripts/app.js")" type='text/javascript' src='@routes.WebJarAssets.requirejs'></script>
+<title>@title</title>
+<link rel="stylesheet" media="screen"
+	href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.css"))"
+>
+<link rel="stylesheet" media="screen"
+	href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.css"))"
+>
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+<script data-main="@routes.Assets.at("javascripts/app.js")" type="text/javascript"
+	src="@routes.WebJarAssets.requirejs"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse" role="navigation">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-            </button>
-            <a class="navbar-brand" href="#">@title</a>
-        </div>
-
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Messages</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div class="container">
-        @content
-    </div>
+	<nav class="navbar navbar-inverse" role="navigation">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse"
+				data-target=".navbar-ex1-collapse">
+				<span class="sr-only">Toggle navigation</span>
+			</button>
+			<a class="navbar-brand" href="#">@title</a>
+		</div>
+		<div class="collapse navbar-collapse navbar-ex1-collapse">
+			@header
+	</nav>
+	<div class="container">@content</div>
 </body>
 </html>
