--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -4,3 +4,21 @@ ul.messages {
     border-bottom: 1px solid #ddd;
   }
 }
+
+nav.loginbar {
+  position: fixed;
+  width: 100%;
+}
+
+.wide.header {
+  zoom:1;
+  vertical-align:middle;
+  z-index:100;
+  position:fixed;
+  box-shadow:0 1px 0 rgba(0,0,0,0.2);
+  width:100%;
+  min-height:54px;
+  background:#fff;
+  padding:8px 0;
+  margin-top: 50px;
+}
