--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -25,8 +25,7 @@
 			<div class="seven columns s-logo-column">
 				<h5 style="margin-top: 7px;" class="caps">
 					<span style="max-width: none;" class="text ib"><div
-							class="text-component" data-component="text" data-name="title"
-							data-text-type="title">
+							class="text-component">
 							<div style="font-family: inherit;" class="content content2">
 								<div>
 									<a href="http://www.audience-extender.com" target="_self"><strong>Audience
