Änderungen nach dem Neuinstallation

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,5 @@
-@(admin: Admin) @main("Audience Extender") {
+@(admin: Admin)
+@main("Audience Extender") {
 @helper.form(routes.MainController.authenticate,'class -> "form-inline pull-right", 'role -> "form") {
 @if(admin==null) {
 <div class="form-group">
