add nv.d3 fro charting

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -22,3 +22,9 @@ nav.loginbar {
   padding:8px 0;
   margin-top: 50px;
 }
+
+.dashboard svg {
+  width: 800px;
+  height: 300px;
+  margin-top: 150px;
+}
