--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" media="screen"
 	href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.css"))"
 >
+<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("nv.d3.css"))" >
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 <script data-main="@routes.Assets.at("javascripts/app.js")" type="text/javascript"
