- formatting changed - layout changed - favicon replased - homepage edited

--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -1,4 +1,5 @@
-@(admin: Admin, current: Admin) @main("My Account") { }{
-
-<article class="current"></article>
+@(admin: Admin, current: Admin) @main("My Account") { } {
+	<div class="container">
+		<article class="current"></article>
+	</div>
 }
