--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -1,15 +1,14 @@
 @(admins: Seq[Admin], current: Admin)
-@main("Admins") { }{ 
-
-<article class="admins">
-	@admins.map {
-		case admin => {
-			<div class="admin">
-				<header>
-					<h2>@admin.email</h2>
-				</header>
-			</div>
-		}
-	}
-</article>
+@main("Admins") { } {
+	<div class="container">
+		<article class="admins">
+			@admins.map {
+				case admin => {
+					<div class="admin">
+						<h2>@admin.email</h2>
+					</div>
+				}
+			}
+		</article>
+	</div>
 }
