--- a/app/views/emailconfirm.scala.html
+++ b/app/views/emailconfirm.scala.html
@@ -1,4 +1,6 @@
 @(current: Admin)
 @email("Confirm E-mail") {
-<article class="current"></article>
+	<div class="container">
+		<article class="current"></article>
+	</div>
 }
