--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,24 +1,88 @@
+/*fixed-navbar*/
+body {
+	padding-top:70px;
+}
+
+
+
+/*login*/
+.form-signin {
+	max-width:330px;
+	padding:15px;
+	margin:0 auto;
+}
+.form-signin .form-signin-heading {
+	margin-bottom:10px;
+}
+.form-signin .form-control {
+	position:relative;
+	font-size:16px;
+	height:auto;
+	padding:10px;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	box-sizing:border-box;
+}
+.form-signin .form-control:focus {
+	z-index:2;
+}
+.form-signin input[type="email"] {
+	margin-bottom:-1px;
+	border-bottom-left-radius:0;
+	border-bottom-right-radius:0;
+}
+.form-signin input[type="password"] {
+	margin-bottom:10px;
+	border-top-left-radius:0;
+	border-top-right-radius:0;
+}
+
+
+
+.head {
+	background-image:url("/assets/images/bg-head.jpg");
+	background-position:49% 50%;
+	background-repeat:no-repeat;
+	background-size:cover;
+	color:#fff;
+	height:250px;
+	padding:50px 0;
+}
+.slides > li {
+	border-bottom:1px solid #ddd;
+	padding:50px 0;
+}
+
+
+
+.footer {
+	color:#ccc;
+	padding:20px 0;
+}
+
+
+
 ul.messages {
-  li {
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-  }
+	li {
+		padding:10px;
+		border-bottom:1px solid #ddd;
+	}
 }
 
 nav.loginbar {
-  position: fixed;
-  width: 100%;
+	position:fixed;
+	width:100%;
 }
 
 .wide.header {
-  zoom:1;
-  vertical-align:middle;
-  z-index:100;
-  position:fixed;
-  box-shadow:0 1px 0 rgba(0,0,0,0.2);
-  width:100%;
-  min-height:54px;
-  background:#fff;
-  padding:8px 0;
-  margin-top: 50px;
+	zoom:1;
+	vertical-align:middle;
+	z-index:100;
+	position:fixed;
+	box-shadow:0 1px 0 rgba(0,0,0,0.2);
+	width:100%;
+	min-height:54px;
+	background:#fff;
+	padding:8px 0;
+	margin-top: 50px;
 }
