--- a/app/views/current.scala.html
+++ b/app/views/current.scala.html
@@ -1,6 +1,7 @@
 @(current: Admin)
-@main("My Account") { }{ 
-
-<article class="current">
-</article>
+@main("My Account") { } {
+	<div class="container">
+		<article class="current">
+		</article>
+	</div>
 }
