--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,17 +1,19 @@
 @(publishers: Seq[Publisher], current: Admin)
-@main("Dashboard") { 
-<h3><a href="@routes.AdminController.admins">Admins</a></h3>
-<h3><a href="@routes.AdminController.current">My Account</a></h3>
+@main("Dashboard") {
+	<ul class="nav navbar-nav navbar-right">
+		<li><a href="@routes.AdminController.admins">Admins</a></li>
+		<li><a href="@routes.AdminController.current">My Account</a></li>
+	</ul>
 }{
-<article class="publishers">
-	@publishers.map {
-		case publisher => {
-			<div class="publisher">
-				<header>
+<div class="container">
+	<article class="publishers">
+		@publishers.map {
+			case publisher => {
+				<div class="publisher">
 					<h2>@publisher.name</h2>
-				</header>
-			</div>
+				</div>
+			}
 		}
-	}
-</article>
+	</article>
+</div>
 }
