--- a/app/views/emailchangepwd.scala.html
+++ b/app/views/emailchangepwd.scala.html
@@ -1,4 +1,6 @@
 @(current: Admin) 
 @email("Change Password") {
-<article class="current"></article>
+	<div class="container">
+		<article class="current"></article>
+	</div>
 }
