--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,9 +1,10 @@
+@import url(http://fonts.googleapis.com/css?family=Oswald);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
 /*fixed-navbar*/
 body {
 	padding-top:70px;
 }
-
-
 
 /*login*/
 .form-signin {
@@ -37,6 +38,16 @@ body {
 	border-top-right-radius:0;
 }
 
+.navbar-default .navbar-brand {
+	color:#285981;
+}
+
+
+
+html,body {
+	font-family:'Open Sans', sans-serif;
+}
+
 
 
 .head {
@@ -45,12 +56,34 @@ body {
 	background-repeat:no-repeat;
 	background-size:cover;
 	color:#fff;
-	height:250px;
+	height:300px;
 	padding:50px 0;
+}
+.head h1 {
+	font-size:40px;
+	font-family:'Oswald', sans-serif;
+	margin-bottom:20px;
+	text-transform:uppercase;
+}
+.head p {
+	font-weight:bold;
 }
 .slides > li {
 	border-bottom:1px solid #ddd;
 	padding:50px 0;
+}
+.slides h1,
+.slides h2,
+.slides h3,
+.slides h4,
+.slides h5,
+.slides h6 {
+	color:#285981;
+	font-family:'Oswald', sans-serif;
+	text-transform:uppercase;
+}
+.slides h3 {
+	font-size:18px;
 }
 
 
