--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,8 +18,12 @@
 <a name="welcome"></a>
 <div class="head">
 	<div class="container">
-		<h1>Monetize Your Online Audience Like Never Before ...</h1>
-		<h5>AudienceExtender helps Event Owners and Managers unleash the hidden revenue potential of their website visitors. Built specifically for B2B media companies by seasoned B2B media experts and advertising technology professionals.</h5>
+		<div class="row">
+			<div class="col-md-6">
+				<h1>Monetize Your Online Audience Like Never Before ...</h1>
+				<p>AudienceExtender helps Event Owners and Managers unleash the hidden revenue potential of their website visitors. Built specifically for B2B media companies by seasoned B2B media experts and advertising technology professionals.</p>
+			</div>
+		</div>
 	</div>
 </div>
 
@@ -28,11 +32,11 @@
 		<li>
 			<a name="how-it-works"></a>
 			<div class="row">
-				<div class="col-md-4"><img alt="" src="@routes.Assets.at("images/ipad.png")" class="img-responsive" /></div>
-				<div class="col-md-8">
+				<div class="col-md-8 col-md-push-4">
 					<h3>1. Get set up in less than 5 minutes...</h3>
 					<p>Place a small snippet of HTML on your website. Your website looks the same. No changes required or made to your content.</p>
 				</div>
+				<div class="col-md-4 col-md-pull-8"><img alt="" src="@routes.Assets.at("images/ipad.png")" class="img-responsive" /></div>
 			</div>
 			<div class="row">
 				<div class="col-md-8">
@@ -42,11 +46,11 @@
 				<div class="col-md-4"><img alt="" src="@routes.Assets.at("images/ipad.png")" class="img-responsive" /></div>
 			</div>
 			<div class="row">
-				<div class="col-md-4"><img alt="" src="@routes.Assets.at("images/ipad.png")" class="img-responsive" /></div>
-				<div class="col-md-8">
+				<div class="col-md-8 col-md-push-4">
 					<h3>3. Earn money in your sleep</h3>
 					<p>"Fire and Forget": because Audience Extender enables you to make money off your audience wherever they are online, you earn money without having to worry about a thing.</p>
 				</div>
+				<div class="col-md-4 col-md-pull-8"><img alt="" src="@routes.Assets.at("images/ipad.png")" class="img-responsive" /></div>
 			</div>
 		</li>
 
@@ -141,8 +145,8 @@
 	</ul>
 
 
-	<div class="footer">
-		<p class="footer">&copy; Copyright 2013 - Audience Extender LLC</p>
-	</div>
+	<footer>
+		<div class="footer">&copy; Copyright 2013 - Audience Extender LLC</div>
+	</footer>
 </div>
 }
