--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.css"))">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 	<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
-	<script data-main="@routes.Assets.at("javascripts/app.js")" type="text/javascript" src="@routes.WebJarAssets.requirejs"></script>
+	<script type="text/javascript" data-main="@routes.Assets.at("javascripts/app.js")" src="@routes.WebJarAssets.requirejs"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
