--- a/app/views/current.scala.html
+++ b/app/views/current.scala.html
@@ -1,7 +1,14 @@
 @(current: Admin)
-@main("My Account") { } {
-	<div class="container">
-		<article class="current">
-		</article>
-	</div>
+@main("My Account") { 
+<ul class="nav navbar-nav">
+	<li><a href="@routes.MainController.dashboard">Dashboard</a></li>
+	<li><a href="@routes.AdminController.admins">Admins</a></li>
+</ul>
+<ul class="nav navbar-nav navbar-right">
+	<li><a href="@routes.MainController.logout()" class="navbar-link">Logout @current.email (@current.name)</a></li>
+</ul>
+} {
+<div class="container">
+	<article class="current"></article>
+</div>
 }
