--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,12 +1,19 @@
 @(publishers: Seq[Publisher], current: Admin)
 @main("Dashboard") {
-  <script data-main="@routes.Assets.at("javascripts/dashboard.js")" type="text/javascript" src="@routes.WebJarAssets.requirejs"></script>
-	<ul class="nav navbar-nav navbar-right">
-		<li><a href="@routes.AdminController.admins">Admins</a></li>
-		<li><a href="@routes.AdminController.current">My Account</a></li>
-	</ul>
+<ul class="nav navbar-nav">
+	<li><a href="@routes.AdminController.admins">Admins</a></li>
+	<li><a href="@routes.AdminController.current">My Account</a></li>
+</ul>
+<ul class="nav navbar-nav navbar-right">
+	<li><a href="@routes.MainController.logout()" class="navbar-link">Logout @current.email (@current.name)</a></li>
+</ul>
+<script data-main="@routes.Assets.at("javascripts/dashboard.js")" type="text/javascript" src="@routes.WebJarAssets.requirejs"></script>
 }{
 <div class="container">
+	<div id="chart" class="dashboard">
+  		<svg></svg>
+	</div>
+
 	<article class="publishers">
 		@publishers.map {
 			case publisher => {
