--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,9 +1,20 @@
+/*frontend*/
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
+/*backend*/
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,400italic,300italic,600italic);
+
+/*less*/
+@color-blue:#275980;
+@color-red:#bf0c0c;
+@color-yellow:#f3b300;
+
+
+
 /*fixed-navbar*/
 body {
-	padding-top:70px;
+	padding-top:50px;
 }
 
 /*login*/
@@ -39,17 +50,32 @@ body {
 }
 
 .navbar-default .navbar-brand {
-	color:#285981;
+	font-family:'Titillium Web',sans-serif;
+	font-size:23px;
+	font-style:italic;
+	font-weight:600;
+	color:@color-blue;
 }
 
 
 
 html,body {
-	font-family:'Open Sans', sans-serif;
+	font-family:'Open Sans',sans-serif;
+}
+
+.m-null {margin:0}
+.p-null {padding:0}
+
+
+.header {
+	background:#1c5078 url("/assets/images/bg-header.jpg") no-repeat top center;
+	height:120px;
+	margin-bottom:20px;
 }
 
 
 
+/*frontend*/
 .head {
 	background-image:url("/assets/images/bg-head.jpg");
 	background-position:49% 50%;
@@ -61,7 +87,7 @@ html,body {
 }
 .head h1 {
 	font-size:40px;
-	font-family:'Oswald', sans-serif;
+	font-family:'Oswald',sans-serif;
 	margin-bottom:20px;
 	text-transform:uppercase;
 }
@@ -78,18 +104,43 @@ html,body {
 .slides h4,
 .slides h5,
 .slides h6 {
-	color:#285981;
-	font-family:'Oswald', sans-serif;
+	color:@color-blue;
+	font-family:'Oswald',sans-serif;
 	text-transform:uppercase;
 }
 .slides h3 {
 	font-size:18px;
 }
+/*frontend*/
+
+
+
+.revenu,
+.ad-spent,
+.profit {
+	font-family:'Titillium Web',sans-serif;
+	font-size:24px;
+	font-weight:300;
+}
+.revenu {
+	color:@color-blue;
+}
+.ad-spent {
+	color:@color-red;
+}
+.profit {
+	color:@color-yellow;
+}
+.secondary {
+	background:#e8e8e8;
+	padding:30px 0;
+}
 
 
 
 .footer {
-	color:#ccc;
+	border-top:10px solid @color-blue;
+	color:#6c6c6c;
 	padding:20px 0;
 }
 
@@ -121,7 +172,6 @@ nav.loginbar {
 }
 
 .dashboard svg {
-  width: 800px;
-  height: 300px;
-  margin-top: 150px;
+	height:300px;
+	margin-top:30px;
 }
