--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -10,18 +10,220 @@
 <script data-main="@routes.Assets.at("javascripts/dashboard.js")" type="text/javascript" src="@routes.WebJarAssets.requirejs"></script>
 }{
 <div class="container">
-	<div id="chart" class="dashboard">
-  		<svg></svg>
-	</div>
-
-	<article class="publishers">
-		@publishers.map {
-			case publisher => {
-				<div class="publisher">
-					<h2>@publisher.name</h2>
+	<div class="row">
+		<div class="col-md-9">
+			<div class="row">
+				<div class="col-md-4">
+					<div class="revenu">
+						$5000 Revenue
+					</div>
 				</div>
-			}
-		}
-	</article>
+				<div class="col-md-4">
+					<div class="ad-spent">
+						$5000 Ad spend
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="profit">
+						$3300 Profit
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<div id="chart" class="dashboard">
+						<svg></svg>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="panel panel-default">
+				<div class="panel-heading">Kampagne MegaAudiences läuft bald aus</div>
+				<div class="panel-body">
+					Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="secondary">
+  <div class="container">
+		<div class="row">
+			<div class="col-md-9">
+				<div class="row">
+					<div class="col-xs-6">
+						<select class="form-control">
+							<option>Status 1</option>
+							<option>Status 2</option>
+							<option>Status 3</option>
+							<option>Status 4</option>
+							<option>Status 5</option>
+						</select>
+					</div>
+					<div class="col-xs-6">
+						<form role="search">
+							<div class="input-group">
+								<input type="text" class="form-control">
+								<span class="input-group-btn">
+									<button class="btn btn-primary" type="button">Search</button>
+								</span>
+							</div>
+						</form>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-6">
+						<p class="" style="margin:20px 0;padding:5px 0;"><strong>Displaying: 1 - 20 of 141</strong></p>
+					</div>
+					<div class="col-xs-6">
+						<ul class="pagination pagination-sm pull-right">
+							<li class="disabled"><a href="#">&laquo;</a></li>
+							<li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a href="#">5</a></li>
+							<li><a href="#">&raquo;</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+						<table class="table table-striped table-bordered m-null">
+							<tr>
+								<th>Name</th>
+								<th>Status</th>
+								<th>Revenue</th>
+								<th>Cost</th>
+								<th>Start</th>
+								<th>End</th>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+							<tr>
+								<td>Leads Con Web Retargeting</td>
+								<td>11,83 %</td>
+								<td>$534,76</td>
+								<td>$4,35</td>
+								<td>7/19/2013</td>
+								<td>8/09/2013</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-6">
+						<p class="" style="margin:20px 0;padding:5px 0;"><strong>Displaying: 1 - 20 of 141</strong></p>
+					</div>
+					<div class="col-xs-6">
+						<ul class="pagination pagination-sm pull-right">
+							<li class="disabled"><a href="#">&laquo;</a></li>
+							<li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a href="#">5</a></li>
+							<li><a href="#">&raquo;</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<p>
+					<button type="button" class="btn btn-default btn-block">New Campaign</button>
+				</p>
+				<p>
+					<button type="button" class="btn btn-default btn-block">New Audience</button>
+				</p>
+				<p>
+					<button type="button" class="btn btn-default btn-block">Yield Maximiser</button>
+				</p>
+				<p>
+					<button type="button" class="btn btn-default btn-block">AD Packages</button>
+				</p>
+				<article class="publishers">
+					@publishers.map {
+						case publisher => {
+							<div class="publisher">
+								<p>@publisher.name</p>
+							</div>
+						}
+					}
+				</article>
+			</div>
+		</div>
+	</div>
 </div>
 }
