--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,7 +4,6 @@
 <head>
 	<title>@title</title>
 	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.css"))">
-	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap-theme.css"))">
 	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("nv.d3.css"))" >
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 	<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
@@ -21,7 +20,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">@title</a>
+			<a class="navbar-brand" href="#">Audience Extender</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			@header
@@ -29,7 +28,20 @@
 	</div>
 </nav>
 
+<div class="header">
+  <div class="container">
+	</div>
+</div>
+
 @content
+
+<div class="footer">
+  <div class="container">
+		<footer>
+			&copy; Copyright 2013 - Audience Extender LLC
+		</footer>
+	</div>
+</div>
 
 </body>
 </html>
