--- a/app/views/current.scala.html
+++ b/app/views/current.scala.html
@@ -5,7 +5,13 @@
 	<li><a href="@routes.AdminController.admins">Admins</a></li>
 </ul>
 <ul class="nav navbar-nav navbar-right">
-	<li><a href="@routes.MainController.logout()" class="navbar-link">Logout @current.email (@current.name)</a></li>
+	<li class="dropdown">
+		<a data-toggle="dropdown" class="dropdown-toggle" href="#">My Account <b class="caret"></b></a>
+		<ul class="dropdown-menu">
+			<li class="dropdown-header">@current.email (@current.name)</li>
+			<li><a href="@routes.MainController.logout()" class="navbar-link">Logout</a></li>
+		</ul>
+	</li>
 </ul>
 } {
 <div class="container">
