--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,20 +1,8 @@
 @(publishers: Seq[Publisher], current: Admin)
 @main("Dashboard") {
-<ul class="nav navbar-nav">
-	<li><a href="@routes.AdminController.admins">Admins</a></li>
-</ul>
-<ul class="nav navbar-nav navbar-right">
-	<li class="dropdown">
-		<a data-toggle="dropdown" class="dropdown-toggle" href="#">My Account <b class="caret"></b></a>
-		<ul class="dropdown-menu">
-			<li><a href="@routes.AdminController.current">My Account</a></li>
-			<li class="divider"></li>
-			<li class="dropdown-header">@current.email (@current.name)</li>
-			<li><a href="@routes.MainController.logout()" class="navbar-link">Logout</a></li>
-		</ul>
-	</li>
-</ul>
-<script data-main="@routes.Assets.at("javascripts/dashboard.js")" type="text/javascript" src="@routes.WebJarAssets.requirejs"></script>
+@menu.admin("Dashboard")
+@menu.logout(current)
+    <script type="text/javascript" data-main="@routes.Assets.at("javascripts/dashboard.js")" src="@routes.WebJarAssets.requirejs"></script>
 }{
 <div class="container">
 	<div class="row">
