--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,20 +7,11 @@
 	<li><a href="#getting-started">Getting Started</a></li>
 </ul>
 @if(admin==null) {
-@helper.form(routes.MainController.authenticate, 'class -> "navbar-form navbar-right", 'role -> "form") {
-<div class="form-group">
-	<input type="email" class="form-control" id="email" name="email" placeholder="Email">
-</div>
-<div class="form-group">
-	<input type="password" class="form-control" id="password" name="password" placeholder="Password">
-</div>
-<button type="submit" class="btn btn-default" id="loginbutton">Login</button>
-} } else {
-@helper.form(routes.MainController.authenticate, 'role -> "form") {
-<ul class="nav navbar-nav navbar-right">
-	<li><a href="@routes.MainController.logout()" class="navbar-link">Logout @admin.email (@admin.name)</a></li>
-</ul>
-} } }{
+    @menu.login()
+} else {
+    @menu.logout(admin)
+}
+}{
 <a name="welcome"></a>
 <div class="head">
 	<div class="container">
