--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -6,14 +6,20 @@
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,400italic,300italic,600italic);
 
 /*less*/
+@font1:'Titillium Web',sans-serif;
+@font2:'Open Sans',sans-serif;
+@font3:'Oswald',sans-serif;
+
 @color-blue:#275980;
 @color-red:#bf0c0c;
 @color-yellow:#f3b300;
+
 .rounded-corners (@radius: 5px) {
 	border-radius:@radius;
 	-webkit-border-radius:@radius;
 	-moz-border-radius:@radius;
 }
+
 
 
 /*fixed-navbar*/
@@ -54,7 +60,7 @@ body {
 }
 
 .navbar-default .navbar-brand {
-	font-family:'Titillium Web',sans-serif;
+	font-family:@font1;
 	font-size:23px;
 	font-style:italic;
 	font-weight:600;
@@ -64,11 +70,12 @@ body {
 
 
 html,body {
-	font-family:'Open Sans',sans-serif;
+	font-family:@font2;
 }
 
 .m-null {margin:0}
 .p-null {padding:0}
+.pagination-fix {margin:20px 0;padding:5px 0;}
 .well-fix {margin-top:10px;}
 
 
@@ -76,6 +83,30 @@ html,body {
 	background:#1c5078 url("/assets/images/bg-header.jpg") no-repeat top center;
 	height:120px;
 	margin-bottom:20px;
+}
+
+.header .nav {
+	border:none;
+	margin-top:83px;
+}
+.header .nav-tabs > li > a:link,
+.header .nav-tabs > li > a:visited {
+	background-color:@color-blue;
+	color:#4f93ba;
+}
+.header .nav-tabs > li > a:hover,
+.header .nav-tabs > li > a:active {
+	background-color:#eee;
+}
+.header .nav-tabs > li.active > a {
+	background-color:#fff;
+	color:#555;
+}
+.header .nav > li > a {
+	font-family:@font1;
+	font-size:16px;
+	padding:6px 35px;
+	text-transform:uppercase;
 }
 
 
@@ -92,7 +123,7 @@ html,body {
 }
 .head h1 {
 	font-size:40px;
-	font-family:'Oswald',sans-serif;
+	font-family:@font3;
 	margin-bottom:20px;
 	text-transform:uppercase;
 }
@@ -110,7 +141,7 @@ html,body {
 .slides h5,
 .slides h6 {
 	color:@color-blue;
-	font-family:'Oswald',sans-serif;
+	font-family:@font3;
 	text-transform:uppercase;
 }
 .slides h3 {
@@ -128,7 +159,7 @@ html,body {
 .legend-revenu,
 .legend-ad-spent,
 .legend-profit {
-	font-family:'Titillium Web',sans-serif;
+	font-family:@font1;
 	font-size:24px;
 	font-weight:300;
 }
@@ -156,12 +187,33 @@ html,body {
 	padding:30px 0;
 }
 
+.btn-plus {
+	font-family:@font1;
+	padding-left:15px;
+	position:relative;
+	text-align:left;
+}
+.btn-plus div {
+	border-right:2px solid #fff;
+	position:absolute;
+	left:48px;
+	top:-1px;
+	height:46px;
+}
+.btn-plus span {
+	padding-right:45px;
+}
+
 
 
 .footer {
 	border-top:10px solid @color-blue;
 	color:#6c6c6c;
 	padding:20px 0;
+}
+.footer a {
+	color:#363636;
+	padding-right:25px;
 }
 
 
