--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.css"))">
 	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("nv.d3.css"))" >
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-theme.css")">
 	<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
 	<script type="text/javascript" data-main="@routes.Assets.at("javascripts/app.js")" src="@routes.WebJarAssets.requirejs"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,15 +30,24 @@
 </nav>
 
 <div class="header">
-  <div class="container">
+	<div class="container">
+		<ul class="nav nav-tabs">
+			<li><a href="#">Audiences</a></li>
+			<li class="active"><a href="#">Campaigns</a></li>
+		</ul>
 	</div>
 </div>
 
 @content
 
 <div class="footer">
-  <div class="container">
+	<div class="container">
 		<footer>
+			<p>
+				<a href="#">Contact</a>
+				<a href="#">Privacy Policy</a>
+				<a href="#">Terms of Service</a>
+			</p>
 			&copy; Copyright 2013 - Audience Extender LLC
 		</footer>
 	</div>
