--- a/app/views/menu/logout.scala.html
+++ b/app/views/menu/logout.scala.html
@@ -1,9 +1,8 @@
 @(current: Admin)
 <ul class="nav navbar-nav navbar-right">
 	<li class="dropdown">
-		<a data-toggle="dropdown" class="dropdown-toggle" href="#">My Account <b class="caret"></b></a>
+		<a data-toggle="dropdown" class="dropdown-toggle" href="#"><span class="glyphicon glyphicon-user"></span> My Account <b class="caret"></b></a>
 		<ul class="dropdown-menu">
-			<li><a href="@routes.AdminController.current">My Account</a></li>
 			<li class="divider"></li>
 			<li class="dropdown-header">@current.email (@current.name)</li>
 			<li><a href="@routes.MainController.logout()" class="navbar-link">Logout</a></li>
