--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -109,6 +109,23 @@ html,body {
 	text-transform:uppercase;
 }
 
+th.sorting {
+	background-image:url("/assets/images/icons/sorting.gif");
+	cursor:pointer;
+}
+th.sorting-up {
+	background-image:url("/assets/images/icons/sorting-up.gif");
+}
+th.sorting-down {
+	background-image:url("/assets/images/icons/sorting-down.gif");
+}
+th.sorting,
+th.sorting-up,
+th.sorting-down {
+	background-position:right center;
+	background-repeat:no-repeat;
+}
+
 
 
 /*frontend*/
