--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -144,12 +144,12 @@
 						<div class="table-responsive">
 							<table class="table table-striped table-bordered m-null">
 								<tr>
-									<th>Name</th>
-									<th>Status</th>
+									<th class="sorting">Name</th>
+									<th class="sorting">Status</th>
 									<th class="sorting-up">Revenue</th>
-									<th>Cost</th>
-									<th>Start</th>
-									<th>End</th>
+									<th class="sorting">Cost</th>
+									<th class="sorting">Start</th>
+									<th class="sorting-down">End</th>
 								</tr>
 								<tr>
 									<td>Leads Con Web Retargeting</td>
