--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1,11 +1,11 @@
-/*frontend*/
+//frontend
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-/*backend*/
+//backend
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web:400,600,300,400italic,300italic,600italic);
 
-/*less*/
+//less
 @font1:'Titillium Web',sans-serif;
 @font2:'Open Sans',sans-serif;
 @font3:'Oswald',sans-serif;
@@ -14,7 +14,7 @@
 @color-red:#bf0c0c;
 @color-yellow:#f3b300;
 
-.rounded-corners (@radius: 5px) {
+.rounded-corners (@radius:5px) {
 	border-radius:@radius;
 	-webkit-border-radius:@radius;
 	-moz-border-radius:@radius;
@@ -22,41 +22,41 @@
 
 
 
-/*fixed-navbar*/
+//fixed-navbar
 body {
 	padding-top:50px;
 }
 
-/*login*/
+//login
 .form-signin {
 	max-width:330px;
 	padding:15px;
 	margin:0 auto;
-}
-.form-signin .form-signin-heading {
-	margin-bottom:10px;
-}
-.form-signin .form-control {
-	position:relative;
-	font-size:16px;
-	height:auto;
-	padding:10px;
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	box-sizing:border-box;
-}
-.form-signin .form-control:focus {
-	z-index:2;
-}
-.form-signin input[type="email"] {
-	margin-bottom:-1px;
-	border-bottom-left-radius:0;
-	border-bottom-right-radius:0;
-}
-.form-signin input[type="password"] {
-	margin-bottom:10px;
-	border-top-left-radius:0;
-	border-top-right-radius:0;
+	.form-signin-heading {
+		margin-bottom:10px;
+	}
+	.form-control {
+		position:relative;
+		font-size:16px;
+		height:auto;
+		padding:10px;
+		-webkit-box-sizing:border-box;
+		-moz-box-sizing:border-box;
+		box-sizing:border-box;
+	}
+	.form-control:focus {
+		z-index:2;
+	}
+	input[type="email"] {
+		margin-bottom:-1px;
+		border-bottom-left-radius:0;
+		border-bottom-right-radius:0;
+	}
+	input[type="password"] {
+		margin-bottom:10px;
+		border-top-left-radius:0;
+		border-top-right-radius:0;
+	}
 }
 
 .navbar-default .navbar-brand {
@@ -83,52 +83,53 @@ html,body {
 	background:#1c5078 url("/assets/images/bg-header.jpg") no-repeat top center;
 	height:120px;
 	margin-bottom:20px;
+	.nav {
+		border:none;
+		margin-top:83px;
+	}
+	.nav-tabs > li > a:link,
+	.nav-tabs > li > a:visited {
+		background-color:@color-blue;
+		color:#4f93ba;
+	}
+	.nav-tabs > li > a:hover,
+	.nav-tabs > li > a:active {
+		background-color:#eee;
+	}
+	.nav-tabs > li.active > a {
+		background-color:#fff;
+		color:#555;
+	}
+	.nav > li > a {
+		font-family:@font1;
+		font-size:16px;
+		padding:6px 35px;
+		text-transform:uppercase;
+	}
 }
 
-.header .nav {
-	border:none;
-	margin-top:83px;
-}
-.header .nav-tabs > li > a:link,
-.header .nav-tabs > li > a:visited {
-	background-color:@color-blue;
-	color:#4f93ba;
-}
-.header .nav-tabs > li > a:hover,
-.header .nav-tabs > li > a:active {
-	background-color:#eee;
-}
-.header .nav-tabs > li.active > a {
-	background-color:#fff;
-	color:#555;
-}
-.header .nav > li > a {
-	font-family:@font1;
-	font-size:16px;
-	padding:6px 35px;
-	text-transform:uppercase;
-}
-
-th.sorting {
-	background-image:url("/assets/images/icons/sorting.gif");
-	cursor:pointer;
-}
-th.sorting-up {
-	background-image:url("/assets/images/icons/sorting-up.gif");
-}
-th.sorting-down {
-	background-image:url("/assets/images/icons/sorting-down.gif");
-}
-th.sorting,
-th.sorting-up,
-th.sorting-down {
-	background-position:right center;
-	background-repeat:no-repeat;
+th {
+	&.sorting {
+		background-image:url("/assets/images/icons/sorting.gif");
+		cursor:pointer;
+	}
+	&.sorting-up {
+		background-image:url("/assets/images/icons/sorting-up.gif");
+	}
+	&.sorting-down {
+		background-image:url("/assets/images/icons/sorting-down.gif");
+	}
+	&.sorting,
+	&.sorting-up,
+	&.sorting-down {
+		background-position:right center;
+		background-repeat:no-repeat;
+	}
 }
 
 
 
-/*frontend*/
+//frontend
 .head {
 	background-image:url("/assets/images/bg-head.jpg");
 	background-position:49% 50%;
@@ -137,34 +138,31 @@ th.sorting-down {
 	color:#fff;
 	height:300px;
 	padding:50px 0;
-}
-.head h1 {
-	font-size:40px;
-	font-family:@font3;
-	margin-bottom:20px;
-	text-transform:uppercase;
-}
-.head p {
-	font-weight:bold;
+	h1 {
+		font-size:40px;
+		font-family:@font3;
+		margin-bottom:20px;
+		text-transform:uppercase;
+	}
+	p {
+		font-weight:bold;
+	}
 }
 .slides > li {
 	border-bottom:1px solid #ddd;
 	padding:50px 0;
 }
-.slides h1,
-.slides h2,
-.slides h3,
-.slides h4,
-.slides h5,
-.slides h6 {
-	color:@color-blue;
-	font-family:@font3;
-	text-transform:uppercase;
+.slides {
+	h1,h2,h3,h4,h5,h6 {
+		color:@color-blue;
+		font-family:@font3;
+		text-transform:uppercase;
+	}
+	h3 {
+		font-size:18px;
+	}
 }
-.slides h3 {
-	font-size:18px;
-}
-/*frontend*/
+//end of frontend
 
 
 
@@ -179,25 +177,33 @@ th.sorting-down {
 	font-family:@font1;
 	font-size:24px;
 	font-weight:300;
-}
-.legend-revenu,
-.legend-ad-spent,
-.legend-profit {
 	span {
 		display:inline-block;
 		float:left;
-    height: 21px;
-    margin:7px 7px 0 0;
+		height:21px;
+		margin:7px 7px 0 0;
 		width:24px;
 		.rounded-corners;
 	}
 }
-.legend-revenu   {color:@color-blue;}
-.legend-ad-spent {color:@color-red;}
-.legend-profit   {color:@color-yellow;}
-.legend-revenu span   {background-color:@color-blue;}
-.legend-ad-spent span {background-color:@color-red;}
-.legend-profit span   {background-color:@color-yellow;}
+.legend-revenu {
+	color:@color-blue;
+	span {
+		background-color:@color-blue;
+	}
+}
+.legend-ad-spent {
+	color:@color-red;
+	span {
+		background-color:@color-red;
+	}
+}
+.legend-profit {
+	color:@color-yellow;
+	span {
+		background-color:@color-yellow;
+	}
+}
 
 .secondary {
 	background:#e8e8e8;
@@ -209,16 +215,16 @@ th.sorting-down {
 	padding-left:15px;
 	position:relative;
 	text-align:left;
-}
-.btn-plus div {
-	border-right:2px solid #fff;
-	position:absolute;
-	left:48px;
-	top:-1px;
-	height:46px;
-}
-.btn-plus span {
-	padding-right:45px;
+	div {
+		border-right:2px solid #fff;
+		position:absolute;
+		left:48px;
+		top:-1px;
+		height:46px;
+	}
+	span {
+		padding-right:45px;
+	}
 }
 
 
@@ -227,10 +233,10 @@ th.sorting-down {
 	border-top:10px solid @color-blue;
 	color:#6c6c6c;
 	padding:20px 0;
-}
-.footer a {
-	color:#363636;
-	padding-right:25px;
+	a {
+		color:#363636;
+		padding-right:25px;
+	}
 }
 
 
@@ -257,7 +263,7 @@ nav.loginbar {
 	min-height:54px;
 	background:#fff;
 	padding:8px 0;
-	margin-top: 50px;
+	margin-top:50px;
 }
 
 .dashboard svg {
