--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -254,7 +254,7 @@
 			</div>
 			<div class="col-md-3">
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
 				</p>
 				<p>
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
@@ -276,6 +276,28 @@
 					}
 				</article>
 				-->
+			</div>
+		</div>
+	</div>
+</div>
+
+
+
+<div class="modal fade" id="editAudience" tabindex="-1" role="dialog" aria-labelledby="New/Edit Audience" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title">New/Edit Audience</h4>
+			</div>
+			<div class="modal-body">
+				<p>
+					Coming soon...
+				</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary">Save</button>
 			</div>
 		</div>
 	</div>
