--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -2,10 +2,18 @@
 @main("Admins") { 
 <ul class="nav navbar-nav">
 	<li><a href="@routes.MainController.dashboard">Dashboard</a></li>
-	<li><a href="@routes.AdminController.current">My Account</a></li>
+	<li class="active"><a href="@routes.AdminController.admins">Admins</a></li>
 </ul>
 <ul class="nav navbar-nav navbar-right">
-	<li><a href="@routes.MainController.logout()" class="navbar-link">Logout @current.email (@current.name)</a></li>
+	<li class="dropdown">
+		<a data-toggle="dropdown" class="dropdown-toggle" href="#"><span class="glyphicon glyphicon-user"></span> My Account <b class="caret"></b></a>
+		<ul class="dropdown-menu">
+			<li><a href="@routes.AdminController.current">My Account</a></li>
+			<li class="divider"></li>
+			<li class="dropdown-header">@current.email (@current.name)</li>
+			<li><a href="@routes.MainController.logout()" class="navbar-link">Logout</a></li>
+		</ul>
+	</li>
 </ul>
 } {
 <div class="container">
