add audience etc tabs

--- a/app/views/menu/admin.scala.html
+++ b/app/views/menu/admin.scala.html
@@ -2,4 +2,6 @@
 <ul class="nav navbar-nav">
 	<li class="@if(active=="Dashboard"){active}"><a href="@routes.MainController.dashboard">Dashboard</a></li>
 	<li class="@if(active=="Admins"){active}"><a href="@routes.AdminController.admins">Admins</a></li>
+	<li class="@if(active=="Publishers"){active}"><a href="@routes.PublisherController.publishers">Publishers</a></li>
+	<li class="@if(active=="Audiences"){active}"><a href="@routes.AudienceController.audiences">Audiences</a></li>
 </ul>
