--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -4,6 +4,14 @@
 @menu.logout(current)
 <script type="text/javascript" data-main="@routes.Assets.at("javascripts/dashboard.js")" src="@routes.WebJarAssets.requirejs"></script>
 }{
+<div class="header">
+	<div class="container">
+		<ul class="nav nav-tabs">
+			<li><a href="#">Audiences</a></li>
+			<li class="active"><a href="#">Campaigns</a></li>
+		</ul>
+	</div>
+</div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-9">
