--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -270,3 +270,28 @@ nav.loginbar {
 	height:300px;
 	margin-top:15px;
 }
+
+div.scroll-buttons {
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	height: 95px;
+	width: 50px;
+}
+
+div.scroll-buttons div {
+	width: 40px;
+	margin: 5px;
+	height: 40px;
+}
+
+div.scroll-buttons a {
+	display: block;
+	visibility: hidden;
+	width: 40px;
+	height: 40px;
+	border: 1px solid #555;
+	border-radius: 10px;
+	padding: 11px;
+	background: #333;
+}
