--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,7 +21,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Audience Extender</a>
+			<a class="navbar-brand" href="/">Audience Extender</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			@header
